--- a/MVC assignment3 final edition/Views/home/Index.cshtml
+++ b/MVC assignment3 final edition/Views/home/Index.cshtml
@@ -9,10 +9,10 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
-</head>
+</head>employeeName
 <body>
-    
-    <div id="messageId" ></div>
+
+    <div id="messageId"></div>
     <div>
         @Html.Raw(ViewBag.message)
         <br />
