--- a/MVC assignment3 final edition/Views/tbl_employee/Create.cshtml
+++ b/MVC assignment3 final edition/Views/tbl_employee/Create.cshtml
@@ -32,7 +32,6 @@
                     @Html.ValidationMessageFor(model => model.employee_status, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
             <div class="form-group">
                 @Html.LabelFor(model => model.Id, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -72,7 +71,7 @@
                     @Html.ValidationMessageFor(model => model.bouns, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
+            
             <div class="form-group">
                 @Html.LabelFor(model => model.rate, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -100,5 +99,8 @@
     <div>
         @Html.ActionLink("Back to List", "Index")
     </div>
+    <script>
+
+    </script>
 </body>
 </html>
